[gd_scene load_steps=6 format=2]

[ext_resource path="res://TriTank.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/tank.png" type="Texture" id=3]
[ext_resource path="res://art/tank_head.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.6594, 10 )

[node name="TriTank" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

scale = Vector2( 3.25, 3.25 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="HeadSprite1" type="Sprite" parent="Sprite" index="0"]

position = Vector2( -15, 7 )
texture = ExtResource( 4 )
flip_h = true
_sections_unfolded = [ "Transform" ]

[node name="HeadSprite2" type="Sprite" parent="Sprite" index="1"]

position = Vector2( 0, -7 )
rotation = 4.71239
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="HeadSprite3" type="Sprite" parent="Sprite" index="2"]

position = Vector2( 15, 7 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="ShootTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


